--- a/index.html
+++ b/index.html
@@ -8,15 +8,28 @@
 </head>
 
 <body>
+  <div id="sidebar">
+    <ul>
+      <<li>
+        <a href="#profile-summary"><i class="fa fa-user" aria-hidden="true"></i></a>
+      </li>
+      <li>
+        <a href="#links"><i class="fa fa-external-link" aria-hidden="true"></i></a>
+      </li>
+      <li>
+        <a href="favorite-experiences"><i class="fa fa-globe" aria-hidden="true"></i></a>
+      </li>
+    </ul>
+  </div>
   <div class="container">
-    <div class="card text-center">
+    <div class="card text-center" id="profile-summary">
       <img src="images/pic.jpeg" alt="Gabriela Preiss" height="150" width="150" id="img-profile" class="img-circle">
       <h1>Gabriela Preiss</h1>
       <h2>Programmer</h2>
       <p>An advocate for creativity, community, and all things <strong>tech</strong></p>
       <a href="https://lewagon.com" class="btn-pink"><i class="fa fa-code" aria-hidden="true"></i></a>
     </div>
-    <div class="card text-center">
+    <div class="card text-center" id="links">
     <ul class ="list-inline">
       <li>
         <a href="https://www.facebook.com/" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i></a>
@@ -32,7 +45,7 @@
       </li>
     </ul>
     </div>
-    <div class="card text-center">
+    <div class="card text-center" id="favorite-experiences">
     <h2>My Favorite Experiences</h2>
     <table id="experiences">
       <tbody>
