--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <a href="#links"><i class="fa fa-external-link" aria-hidden="true"></i></a>
       </li>
       <li>
-        <a href="favorite-experiences"><i class="fa fa-globe" aria-hidden="true"></i></a>
+        <a href="#favorite-experiences"><i class="fa fa-globe" aria-hidden="true"></i></a>
       </li>
     </ul>
   </div>
